2006-02-06  Edward Hervey  <edward@fluendo.com>

	* MAINTAINERS:
	* Makefile.am:
	Added maintainers file in order to have proper pitivi-main@gnome.org.
	Welcome PiTiVi to gnome.org :)

2006-02-06  Edward Hervey  <edward@fluendo.com>

	* pitivi/check.py:
	Added check for autodetect plugins existence.

	* pitivi/bin.py:
	* pitivi/discoverer.py:
	* pitivi/effects.py:
	* pitivi/pitivi.py:
	* pitivi/playground.py:
	* pitivi/project.py:
	* pitivi/settings.py:
	* pitivi/sourcelist.py:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/viewer.py:
	Better debug levels

	* pitivi/timeline.py:
	gnlfilesource is only used by TimelineFileSource
	Added more signals to TimelineComposition
	* pitivi/ui/Makefile.am:
	* pitivi/ui/complexinterface.py:
	* pitivi/ui/complexsource.py:
	* pitivi/ui/ruler.py:
	Added complexinterface.py, complexsource.py and ruler.py

	* pitivi/ui/complexlayer.py:
	* pitivi/ui/complexstack.py:
	* pitivi/ui/complextimeline.py:
	Better designed ComplexTimeline, layer and tracks
	
	* pitivi/ui/timeline.py:
	CTRL + scroll does vertical scrolling in complex timeline.
	* pitivi/ui/timelineobjects.py:
	ooops, don't need pango anymore

2006-01-27  Edward Hervey  <edward@fluendo.com>

	* pitivi/Makefile.am:
	* pitivi/check.py:
	* pitivi/pitivi.py:
	Added check system at startup to tell users in a clear fashion what
	the problem is (if any).

2006-01-26  Edward Hervey  <edward@fluendo.com>

	* pitivi/discoverer.py:
	Handle gracefully files that contain no stream but emit a
	GST_TAG_ELEMENT with redirection.
	Force pipeline to NULL when finished analyzing a file.

2006-01-25  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/Makefile.am: (ui_PYTHON): 
	Forgot to add those files to be distributed.

2006-01-25  Christian Schaller <christian@fluendo.com>

	* Add .cvsignore files
	* Add COPYING file with the LGPL
	* Configure .desktop file to get installed

2006-01-24  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* pitivi/timeline.py:
	doc fix