@@ -40,7 +40,6 @@ class PitiviMainWindow(gtk.Window):
         gst.log("Creating MainWindow")
         self.pitivi = pitivi
         gtk.Window.__init__(self)
-        self.maximize()
         self._set_actions()
         self._create_gui()
         self.pitivi.connect("new-project", self._new_project_cb)
